Organized angular code into components and services. Started some socket stuff

--- a/angular-client/src/app/components/navbar/navbar.component.html
+++ b/angular-client/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" routerLink="/test-api">Test Api</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/chat">Chat</a>
+        <a class="nav-link" routerLink="/test-socket">Test Socket</a>
       </li>
     </ul>
   </div>
