Added babylonJs with npm. Created a starter template for babylonjs code

--- a/angular-client/src/app/components/navbar/navbar.component.html
+++ b/angular-client/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,9 @@
         <a class="nav-link" routerLink="/game">Game</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/test-babylon">Babylon</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/test-api">Test Api</a>
       </li>
       <li class="nav-item">
