Made a playground mode for practicing babylon

--- a/angular-client/src/app/components/test-babylon/test-babylon.component.html
+++ b/angular-client/src/app/components/test-babylon/test-babylon.component.html
@@ -1,2 +1,2 @@
+<babylon id="babylon-viewer" camera.behaviors.auto-rotate="0"></babylon>
 <babylon model="assets/scene.babylon"></babylon>
-<canvas #canvas></canvas>
