--- a/angular-client/src/app/components/navbar/navbar.component.html
+++ b/angular-client/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/test-socket">Test Socket</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/playground">Playground</a>
+      </li>
     </ul>
   </div>
 </nav>
