Added sidenav and landing page

--- a/angular-client/src/app/components/test-babylon/test-babylon.component.html
+++ b/angular-client/src/app/components/test-babylon/test-babylon.component.html
@@ -1,1 +1,15 @@
-<canvas #canvas></canvas>
+<mat-drawer-container class="example-container" autosize>
+    <mat-drawer #drawer class="example-sidenav" mode="over">
+        <h1>Settings</h1>
+        <mat-divider></mat-divider>
+        <br>
+        <br>
+        <span class="material-icons">mouse</span>
+            Sensitivity<mat-slider thumbLabel="true"></mat-slider>
+    </mat-drawer>
+    <canvas #canvas></canvas>
+</mat-drawer-container>
+
+
+
+
