Added username support

--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -11,18 +11,17 @@
         This app is currently in development. It is a Dockerized MEAN stack integrated with BabylonJS for 3D rendering. 
         The goal is to make some sort of 3D multiplayer FPS for people to enjoy :) Oh yeah, and I am using socket.io 
         for the online multiplayer. Still a work in progress as I am developing this alone. Feel free to enter a username
-        and play around with what I have developed so far :) Also, did you know the Shiba Inu was originally
-        bred for hunting?
+        and play around with what I have developed so far :)
       </p>
       <form class="example-form">
         <mat-form-field class="example-full-width">
           <mat-label>User Name</mat-label>
-          <input matInput placeholder="Ex. xx-legit-snipes" value="">
+          <input matInput [value]="username" (input)="username = $event.target.value" placeholder="Ex. xx-legit-snipes">
         </mat-form-field>
     </form>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary">Play</button>
+        <button mat-raised-button color="primary" (click)="play()">Play</button>
     </mat-card-actions>
   </mat-card>
 </div>
