Added home page instructions

--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -8,10 +8,8 @@
     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
       <p>
-        This app is currently in development. It is a Dockerized MEAN stack integrated with BabylonJS for 3D rendering. 
-        The goal is to make some sort of 3D multiplayer FPS for people to enjoy :) Oh yeah, and I am using socket.io 
-        for the online multiplayer. Still a work in progress as I am developing this alone. Feel free to enter a username
-        and play around with what I have developed so far :)
+        Enter a username if you want and then click the <strong>Play</strong> button. Once the game is loaded you can press <strong>Tab</strong>  
+        to see the controls and adjust your settings
       </p>
       <form class="example-form">
         <mat-form-field class="example-full-width">
