--- a/angular-client/src/app/components/test-babylon/test-babylon.component.html
+++ b/angular-client/src/app/components/test-babylon/test-babylon.component.html
@@ -21,47 +21,51 @@
         <br>
         <br>
         <span id="nav" class="material-icons">vertical_split</span>
-        Side Panel: <strong>Tab</strong>
+        Side Panel: <strong id="strong">Tab</strong>
         <br>   
         <mat-divider></mat-divider>
         <span id="move" class="material-icons">directions_walk</span>
-        Move: <strong>W, A, S, D</strong>
+        Move: <strong id="strong">W, A, S, D</strong>
         <br> 
         <mat-divider></mat-divider>
         <span id="run" class="material-icons">directions_run</span>
-        Run: <strong>Hold Shift</strong>
+        Run: <strong id="strong">Hold Shift</strong>
         <br>
         <mat-divider></mat-divider> 
         <span id="crouch" class="material-icons">airline_seat_legroom_reduced</span>
-        Crouch: <strong>Hold Ctrl</strong>
+        Crouch: <strong id="strong">Hold Ctrl</strong>
         <br> 
         <mat-divider></mat-divider>
         <span id="jump" class="material-icons">self_improvement</span>
-        Toggle Gravity: <strong>Space</strong>
-        <br> 
-        <mat-divider></mat-divider>
-        <span id="shoot" class="material-icons">bolt</span>
-        Shoot: <strong>Left Click</strong>
+        Toggle Gravity: <strong id="strong">Space</strong>
         <br> 
         <mat-divider></mat-divider>
         <span id="aim" class="material-icons">gps_fixed</span>
-        Aim Down Sight: <strong>Right Click</strong>
+        Aim Down Sight: <strong id="strong">Right Click</strong>
+        <br> 
+        <mat-divider></mat-divider>
+        <span id="shoot" class="material-icons">bolt</span>
+        Shoot Weapon: <strong id="strong">Left Click</strong>
         <br> 
         <mat-divider></mat-divider>
         <span id="swap" class="material-icons">swap_horiz</span>
-        Swap Weapons: <strong>F</strong>
+        Swap Weapon: <strong id="strong">F</strong>
+        <br> 
+        <mat-divider></mat-divider>
+        <span id="pickup" class="material-icons">swap_vert</span>
+        Pickup Weapon: <strong id="strong">E</strong>
         <br> 
         <mat-divider></mat-divider>
         <span id="reload" class="material-icons">rotate_left</span>
-        Reload Weapon: <strong>R</strong>
+        Reload Weapon: <strong id="strong">R</strong>
         <br> 
         <mat-divider></mat-divider>
         <span id="grenade" class="material-icons">fire_extinguisher</span>
-        Grenade: <strong>G</strong>
+        Grenade: <strong id="strong">G</strong>
         <br> 
         <mat-divider></mat-divider>
         <span id="melee" class="material-icons">dry</span>
-        Melee: <strong>4</strong>
+        Melee: <strong id="strong">4</strong>
     </mat-drawer>
     <canvas #canvas></canvas>
 </mat-drawer-container>
