Implemented crouch on C

--- a/angular-client/src/app/components/test-babylon/test-babylon.component.html
+++ b/angular-client/src/app/components/test-babylon/test-babylon.component.html
@@ -29,11 +29,11 @@
         <br> 
         <mat-divider></mat-divider>
         <span id="run" class="material-icons">directions_run</span>
-        Run: <strong id="strong">Hold Shift</strong>
+        Sprint: <strong id="strong">Hold Shift</strong>
         <br>
         <mat-divider></mat-divider> 
         <span id="crouch" class="material-icons">airline_seat_legroom_reduced</span>
-        Crouch: <strong id="strong">Hold Ctrl</strong>
+        Toggle Crouch: <strong id="strong">C</strong>
         <br> 
         <mat-divider></mat-divider>
         <span id="jump" class="material-icons">self_improvement</span>
