--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -2,13 +2,13 @@
 <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Welcome to Wick's App</mat-card-title>
+      <mat-card-title>Welcome</mat-card-title>
       <mat-card-subtitle>Phaser.io | Babylon.js | Three.js</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <img mat-card-image src="/assets/wick.png" alt="Wick logo">
     <mat-card-content>
       <p>
-        Enter a username if you want and then click the <strong>Play</strong> button. Once the game is loaded you can press <strong>Tab</strong>  
+        Enter a username if you want...and then click the <strong>Play</strong> button. Once the game is loaded you can press <strong>Tab</strong>  
         to see the controls and adjust your settings
       </p>
       <form class="example-form">
