--- a/angular-client/src/app/components/threejs/threejs.component.css
+++ b/angular-client/src/app/components/threejs/threejs.component.css
@@ -8,3 +8,22 @@ canvas {
   height: 100%;
   display: block;
 }
+
+.example-sidenav {
+  padding: 20px;
+  color: aliceblue;
+  background-color: #212529;
+}
+
+.material-icons {
+  vertical-align: middle;
+  color:#673ab7
+}
+
+#face {
+  padding-left: 14px;
+}
+
+#strong {
+  float: right;
+}
