Updated side nav with more controls and fullscreen mode

--- a/angular-client/src/app/components/threejs/threejs.component.html
+++ b/angular-client/src/app/components/threejs/threejs.component.html
@@ -24,6 +24,14 @@
         Side Panel: <strong id="strong">Tab</strong>
         <br>   
         <mat-divider></mat-divider>
+        <span id="nav" class="material-icons">fullscreen</span>
+        Fullscreen: <strong id="strong">`</strong>
+        <br>   
+        <span id="nav" class="material-icons">lock_open</span>
+        Unlock Cursor: <strong id="strong">Esc</strong>
+        <br>   
+        <mat-divider></mat-divider>
+        <mat-divider></mat-divider>
         <span id="move" class="material-icons">directions_walk</span>
         Move: <strong id="strong">W, A, S, D</strong>
         <br> 
