--- a/angular-client/src/app/components/threejs/threejs.component.html
+++ b/angular-client/src/app/components/threejs/threejs.component.html
@@ -78,6 +78,9 @@
     <canvas #canvas id="canvas"></canvas>
 </mat-drawer-container>
 
+<!-- create an empty div to append the debugger to so that it doesnt get hidden behind the sidenav -->
+<div id="debug"></div>
+
 
 
 
