Two cameras working. Debug and fps

--- a/angular-client/src/app/components/threejs/threejs.component.html
+++ b/angular-client/src/app/components/threejs/threejs.component.html
@@ -27,6 +27,15 @@
         <span id="nav" class="material-icons">fullscreen</span>
         Fullscreen: <strong id="strong">`</strong>
         <br>   
+        <mat-divider></mat-divider>
+        <span id="nav" class="material-icons">bug_report</span>
+        Debug Mode: <strong id="strong">+</strong>
+        <br>   
+        <mat-divider></mat-divider>
+        <span id="nav" class="material-icons">flight_takeoff</span>
+        Debug Orbit: <strong id="strong">-</strong>
+        <br>   
+        <mat-divider></mat-divider>
         <span id="nav" class="material-icons">lock_open</span>
         Unlock Cursor: <strong id="strong">Esc</strong>
         <br>   
