--- a/angular-client/src/app/components/babylonjs/babylonjs.component.html
+++ b/angular-client/src/app/components/babylonjs/babylonjs.component.html
@@ -24,6 +24,22 @@
         Side Panel: <strong id="strong">Tab</strong>
         <br>   
         <mat-divider></mat-divider>
+        <span id="nav" class="material-icons">fullscreen</span>
+        Fullscreen: <strong id="strong">`</strong>
+        <br>   
+        <mat-divider></mat-divider>
+        <span id="nav" class="material-icons">bug_report</span>
+        Debug Mode: <strong id="strong">+</strong>
+        <br>   
+        <mat-divider></mat-divider>
+        <span id="nav" class="material-icons">flight_takeoff</span>
+        Debug Orbit: <strong id="strong">-</strong>
+        <br>   
+        <mat-divider></mat-divider>
+        <span id="nav" class="material-icons">lock_open</span>
+        Unlock Cursor: <strong id="strong">Esc</strong>
+        <br>   
+        <mat-divider></mat-divider>
         <span id="move" class="material-icons">directions_walk</span>
         Move: <strong id="strong">W, A, S, D</strong>
         <br> 
