--- a/angular-client/src/app/components/login/login.component.html
+++ b/angular-client/src/app/components/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class='main-div'>
+    <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Welcome</mat-card-title>
+          <mat-card-subtitle>Wanna play a qwicki?</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="/assets/wick.png" alt="Wick logo">
+        <mat-card-content>
+          <form class="example-form">
+            <mat-form-field class="example-full-width">
+              <mat-label>User Name</mat-label>
+              <input matInput [value]="username" (input)="username = $event.target.value" placeholder="Ex. xx-legit-snipes">
+            </mat-form-field>
+          </form>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-raised-button color="primary" (click)="login()">Login</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+    
