--- a/angular-client/src/app/components/login/login.component.css
+++ b/angular-client/src/app/components/login/login.component.css
@@ -1,4 +1,4 @@
-.example-card {
+.login-card {
     max-width: 400px;
     color: aliceblue;
     background-color: #212529;
@@ -8,18 +8,18 @@
     color:rgba(255,255,255,.5);
 }
 
-.example-header-image {
+.login-header-image {
     background-image: url('/assets/wick.png');
     background-size: cover;
 }
 
-.example-form {
+.login-form {
     min-width: 150px;
     max-width: 500px;
     width: 100%;
 }
   
-.example-full-width {
+.login-full-width {
     width: 100%;
 }
 
