Changed AuthCredentials to Credentials

--- a/angular-client/src/app/components/login/login.component.html
+++ b/angular-client/src/app/components/login/login.component.html
@@ -10,11 +10,11 @@
           <form class="login-form">
             <mat-form-field class="login-full-width">
               <mat-label>User Name</mat-label>
-              <input matInput [(ngModel)]="authCredentials.username" name="username">
+              <input matInput [(ngModel)]="credentials.username" name="username">
             </mat-form-field>
             <mat-form-field class="login-full-width">
                 <mat-label>Password</mat-label>
-                <input matInput [(ngModel)]="authCredentials.password" name="password">
+                <input matInput [(ngModel)]="credentials.password" name="password">
               </mat-form-field>
           </form>
         </mat-card-content>
