--- a/angular-client/src/app/components/login/login.component.html
+++ b/angular-client/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
             </mat-form-field>
             <mat-form-field class="login-full-width">
                 <mat-label>Password</mat-label>
-                <input matInput [(ngModel)]="credentials.password" name="password">
+                <input matInput [(ngModel)]="credentials.password" type="password" name="password">
               </mat-form-field>
           </form>
         </mat-card-content>
