--- a/angular-client/src/app/components/login/login.component.html
+++ b/angular-client/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
         </mat-card-header>
         <img mat-card-image src="/assets/wick.png" alt="Wick logo">
         <mat-card-content>
-          <form class="login-form">
+          <form class="login-form" (ngSubmit)="login()">
             <mat-form-field class="login-full-width">
               <mat-label>User Name</mat-label>
               <input matInput [(ngModel)]="credentials.username" name="username">
@@ -15,11 +15,9 @@
             <mat-form-field class="login-full-width">
                 <mat-label>Password</mat-label>
                 <input matInput [(ngModel)]="credentials.password" type="password" name="password">
-              </mat-form-field>
+            </mat-form-field>
+            <button mat-raised-button color="primary" type="submit">Login</button>
           </form>
         </mat-card-content>
-        <mat-card-actions>
-            <button mat-raised-button color="primary" (click)="login()">Login</button>
-        </mat-card-actions>
       </mat-card>
     </div>
