--- a/angular-client/src/app/components/navbar/navbar.component.html
+++ b/angular-client/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul *ngIf="isLoggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/phaserio">Phaser.io</a>
       </li>
@@ -14,6 +14,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/threejs">Three.js</a>
+      </li>
+      <li class="nav-item">
+        <button mat-raised-button color="primary" (click)="logout()">Logout</button>
       </li>
     </ul>
   </div>
