Http interceptor implemented. Basic jwt auth works

--- a/angular-client/src/app/components/navbar/navbar.component.html
+++ b/angular-client/src/app/components/navbar/navbar.component.html
@@ -19,5 +19,6 @@
         <button mat-raised-button color="primary" (click)="logout()">Logout</button>
       </li>
     </ul>
+    <button mat-raised-button color="primary" (click)="authenticateJWT()">Test</button>
   </div>
 </nav>
