Added logic to prevent non admin user from updating their role on the front end and backend

--- a/angular-client/src/app/components/user-profile/user-profile.component.html
+++ b/angular-client/src/app/components/user-profile/user-profile.component.html
@@ -25,7 +25,7 @@
           </mat-form-field>
           <mat-form-field class="user-profile-full-width">
             <mat-label>Role</mat-label>
-            <input matInput [(ngModel)]="user.role" name="role">
+            <input matInput disabled [(ngModel)]="user.role" name="role">
           </mat-form-field>
           <mat-form-field class="user-profile-full-width">
             <mat-label>username</mat-label>
