--- a/angular-client/src/app/components/babylonjs/babylonjs.component.html
+++ b/angular-client/src/app/components/babylonjs/babylonjs.component.html
@@ -5,7 +5,7 @@
         <br>
         <br>
         Sensitivity
-        <mat-slider min="200" max="20000" [(value)]="cameraSensitivity" (change)="setCameraSensitivity(cameraSensitivity)" thumbLabel="true"></mat-slider>       
+        <mat-slider min="200" max="20000" [(ngModel)]="cameraSensitivity" (change)="setCameraSensitivity(cameraSensitivity)" thumbLabel="true"></mat-slider>       
         <span class="material-icons">mouse</span>   
         <br>
         <br>
