--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -34,7 +34,7 @@
 
             <ng-container matColumnDef="send">
                 <td mat-cell *matCellDef="let element">
-                    <span class="material-icons">send</span>
+                    <span (click)="send()" class="material-icons">send</span>
                 </td>
             </ng-container>
           
