--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -5,10 +5,10 @@
         <mat-divider></mat-divider>
         <br>
         <br>
-        <form class="home-form" (ngSubmit)="search()">
+        <form class="home-form" (ngSubmit)="sendFriendRequest()">
             <mat-form-field class="home-full-width">
-              <mat-label>Add New Friend</mat-label>
-              <input matInput [(ngModel)]="searchValue" name="search">
+              <mat-label>Send Friend Request</mat-label>
+              <input matInput [(ngModel)]="potentialFriend" name="sendFriendRequest">
             </mat-form-field>
         </form>   
         <form class="home-form">
@@ -23,18 +23,18 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
 
             <ng-container matColumnDef="name">
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.username}} </td>
             </ng-container>
 
             <ng-container matColumnDef="delete">
                 <td mat-cell *matCellDef="let element">
-                    <span class="material-icons">close</span>
+                    <span (click)="removeFriend(element)" class="material-icons">close</span>
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="send">
                 <td mat-cell *matCellDef="let element">
-                    <span (click)="send()" class="material-icons">send</span>
+                    <span class="material-icons">send</span>
                 </td>
             </ng-container>
           
@@ -49,7 +49,7 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
 
             <ng-container matColumnDef="name">
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+              <td mat-cell *matCellDef="let element"> {{element.username}} </td>
             </ng-container>
 
             <ng-container matColumnDef="delete">
