--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -16,13 +16,41 @@
               <mat-label>Friends</mat-label>
               <input matInput (keyup)="filter($event)" name="filter">
             </mat-form-field>
-        </form>    
+        </form>  
+        
+        <h1><span style="color:rgb(0, 162, 255)">friend requests</span></h1>
+        <mat-divider></mat-divider>
+ 
+        <table mat-table [dataSource]="friendRequests" class="mat-elevation-z0">
+
+            <ng-container matColumnDef="username">
+              <td mat-cell *matCellDef="let element"> {{element.from.username}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="reject">
+                <td mat-cell *matCellDef="let element">
+                    <span (click)="rejectFriendRequest(element)" class="material-icons">close</span>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="accept">
+                <td mat-cell *matCellDef="let element">
+                    <span (click)="acceptFriendRequest(element)" class="material-icons">done</span>
+                </td>
+            </ng-container>
+          
+            <tr mat-row *matRowDef="let row; columns: friendRequestsDisplayedColumns;"></tr>
+          </table>
+
+        <br>
+        <br>            
+
         <h1><span style="color:rgb(0, 255, 149)">online</span></h1>
         <mat-divider></mat-divider>
  
         <table mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
 
-            <ng-container matColumnDef="name">
+            <ng-container matColumnDef="username">
               <td mat-cell *matCellDef="let element"> {{element.username}} </td>
             </ng-container>
 
@@ -38,17 +66,17 @@
                 </td>
             </ng-container>
           
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
           </table>
-
         <br>
-        <br>       
+        <br>  
+
         <h1><span style="color:rgb(255, 0, 76)">offline</span></h1>
         <mat-divider></mat-divider>
 
         <table mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
 
-            <ng-container matColumnDef="name">
+            <ng-container matColumnDef="username">
               <td mat-cell *matCellDef="let element"> {{element.username}} </td>
             </ng-container>
 
@@ -64,7 +92,7 @@
                 </td>
             </ng-container>
           
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
           </table>
 
     </mat-drawer>
@@ -78,8 +106,7 @@
             <img mat-card-image src="/assets/chillin.png" alt="Wick logo">
             <mat-card-content>
             </mat-card-content>
-          </mat-card>
-    
+         </mat-card>
     </div>
 </mat-drawer-container>
 
