--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
         <h1><span style="color:rgb(0, 162, 255)">friend requests</span></h1>
         <mat-divider></mat-divider>
  
-        <table mat-table [dataSource]="friendRequests" class="mat-elevation-z0">
+        <table mat-table [dataSource]="inboundFriendRequests" class="mat-elevation-z0">
 
             <ng-container matColumnDef="username">
               <td mat-cell *matCellDef="let element"> {{element.from.username}} </td>
@@ -38,9 +38,8 @@
                 </td>
             </ng-container>
           
-            <tr mat-row *matRowDef="let row; columns: friendRequestsDisplayedColumns;"></tr>
-          </table>
-
+            <tr mat-row *matRowDef="let row; columns: inboundFriendRequestsDisplayedColumns;"></tr>
+        </table>
         <br>
         <br>            
 
@@ -66,7 +65,7 @@
             </ng-container>
           
             <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
-          </table>
+        </table>
         <br>
         <br>  
 
@@ -93,6 +92,28 @@
           
             <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
           </table>
+          <br>
+          <br>  
+
+          <h1><span style="color:rgba(236, 232, 0, 0.884)">pending</span></h1>
+          <mat-divider></mat-divider>
+          
+          <table mat-table [dataSource]="outboundFriendRequests" class="mat-elevation-z0">
+
+            <ng-container matColumnDef="username">
+              <td mat-cell *matCellDef="let element"> {{element.to.username}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="reject">
+                <td mat-cell *matCellDef="let element">
+                    <span (click)="revokeFriendRequest(element)" class="material-icons">close</span>
+                </td>
+            </ng-container>
+          
+            <tr mat-row *matRowDef="let row; columns: outboundFriendRequestsDisplayedColumns;"></tr>
+        </table>
+        <br>
+        <br> 
 
     </mat-drawer>
     <div class="main-div">
