More refactoring. Made helper functions for event listeners

--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="example-container" autosize>
     <mat-drawer #drawer class="example-sidenav" mode="over">
-        <h1>Hello, {{user.username}}</h1>
+        <h1>Hello, {{host.username}}</h1>
         <mat-divider></mat-divider>
         <br>
         <br>
