--- a/angular-client/src/app/components/babylonjs/babylonjs.component.css
+++ b/angular-client/src/app/components/babylonjs/babylonjs.component.css
@@ -22,3 +22,18 @@ canvas {
 #strong {
   float: right;
 }
+
+/* 
+   Need to use ::ng-deep to get access to angular material applied class...use !important to override the last laye of css being applied.
+   This will override the overflow property to get rid of the double scroll bars...while still allowing for one
+*/
+::ng-deep .mat-drawer-inner-container {
+  overflow: visible !important;
+} 
+
+/* 
+   If i want to get rid of both scroll bars comment this css in and the above css out
+*/
+/* .mat-drawer-inner-container::-webkit-scrollbar {
+  display: none;
+} */
