--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -114,6 +114,8 @@
         </table>
         <br>
         <br>
+
+        <div style="position:absolute; left:200px">AYEEEE</div> 
     </mat-drawer>
     <div class="main-div">
         <mat-card class="home-card">
