--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -27,7 +27,7 @@
   width: 4px;
   height: 4px;
   overflow-y: scroll;
-  background: grey;
+  background: rgba(255,255,255,.5);
   box-shadow: inset 0 0 4px #707070;
 }
 
