--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -23,7 +23,7 @@
         <table mat-table [dataSource]="inboundFriendRequests" class="mat-elevation-z0">
 
             <ng-container matColumnDef="username">
-              <td mat-cell *matCellDef="let element"> {{element.from.username}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.from.username}} </td>
             </ng-container>
 
             <ng-container matColumnDef="reject">
@@ -37,7 +37,7 @@
                     <span (click)="acceptFriendRequest(element)" class="material-icons">done</span>
                 </td>
             </ng-container>
-          
+        
             <tr mat-row *matRowDef="let row; columns: inboundFriendRequestsDisplayedColumns;"></tr>
         </table>
         <br>
@@ -47,23 +47,26 @@
         <mat-divider></mat-divider>
  
         <table mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
-
             <ng-container matColumnDef="username">
-              <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="delete">
-                <td mat-cell *matCellDef="let element">
-                    <span (click)="removeFriend(element)" class="material-icons">close</span>
+                <td mat-cell *matCellDef="let element"> 
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            {{element.username}}
+                        </mat-expansion-panel-header>
+                      
+                        <ng-template matExpansionPanelContent>
+                            <span (click)="removeFriend(element)" class="material-icons">close</span>
+                            <form class="example-form">
+                                <mat-form-field class="example-full-width">
+                                  <mat-label>Leave a comment</mat-label>
+                                  <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+                                </mat-form-field>
+                              </form>
+                            <span (click)="sendMessage(element)" class="material-icons">send</span>
+                        </ng-template>
+                      </mat-expansion-panel>
                 </td>
             </ng-container>
-
-            <ng-container matColumnDef="send">
-                <td mat-cell *matCellDef="let element">
-                    <span (click)="sendMessage(element)" class="material-icons">send</span>
-                </td>
-            </ng-container>
-          
             <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
         </table>
         <br>
@@ -73,23 +76,26 @@
         <mat-divider></mat-divider>
 
         <table mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
-
             <ng-container matColumnDef="username">
-              <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="delete">
-                <td mat-cell *matCellDef="let element">
-                    <span (click)="removeFriend(element)" class="material-icons">close</span>
+                <td mat-cell *matCellDef="let element"> 
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            {{element.username}}
+                        </mat-expansion-panel-header>
+                      
+                        <ng-template matExpansionPanelContent>
+                            <span (click)="removeFriend(element)" class="material-icons">close</span>
+                            <form class="example-form">
+                                <mat-form-field class="example-full-width">
+                                  <mat-label>Leave a comment</mat-label>
+                                  <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+                                </mat-form-field>
+                              </form>
+                            <span (click)="sendMessage(element)" class="material-icons">send</span>
+                        </ng-template>
+                      </mat-expansion-panel>
                 </td>
             </ng-container>
-
-            <ng-container matColumnDef="send">
-                <td mat-cell *matCellDef="let element">
-                    <span (click)="sendMessage(element)" class="material-icons">send</span>
-                </td>
-            </ng-container>
-          
             <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns;"></tr>
           </table>
           <br>
