--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="example-container" autosize hasBackdrop="false">
+<mat-drawer-container class="example-container" autosize>
     <mat-drawer #drawer class="example-sidenav" mode="over">
         <h1>Hello, {{host.username}}</h1>
         <mat-divider></mat-divider>
