--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
@@ -1,5 +1,5 @@
 .example-sidenav {
-  width: 300px;
+  width: 350px;
   padding: 20px;
   color: aliceblue;
   background-color: #212529;
@@ -50,7 +50,7 @@ th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:
 }
 
 .mat-expansion-panel-header {
-  padding: 0;
+  padding: 0px;
   padding-right: 7px;
 }
 
@@ -58,4 +58,26 @@ th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:
   color: rgba(255,255,255,.5);
 }
 
+
+/* social cell stuff */
+.offlineHint {
+  color: aliceblue;
+}
+
+.offlineInput {
+  width: 100%;
+}
+
+.onlineHint {
+  color: aliceblue;
+}
+
+.onlineInput {
+  width: 100%;
+}
+
+::ng-deep .mat-expansion-panel-body {
+  padding: 0px !important;
+  padding-bottom: 7px !important;
+}
 
