Able to extract message and clear it on button click...trying to figure out enter

--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -59,7 +59,7 @@
                                 <textarea cdkTextareaAutosize matInput maxlength="250" #onlineInput></textarea>
                                 <mat-hint class="onlineHint" align="end">{{onlineInput.value.length || 0}}/250</mat-hint>
                             </mat-form-field>
-                            <span matTooltip="Send Message" matTooltipPosition="right" (click)="sendMessage(element)" class="material-icons">send</span>
+                            <span matTooltip="Send Message" matTooltipPosition="right" (click)="sendMessage(element, onlineInput)" class="material-icons">send</span>
                         </ng-template>
                     </mat-expansion-panel>
                 </td>
@@ -92,7 +92,7 @@
                                 <textarea cdkTextareaAutosize matInput maxlength="250" #offlineInput></textarea>
                                 <mat-hint class="offlineHint" align="end">{{offlineInput.value.length || 0}}/250</mat-hint>
                             </mat-form-field>
-                            <span matTooltip="Send Message" matTooltipPosition="right" (click)="sendMessage(element)" class="material-icons">send</span>
+                            <span matTooltip="Send Message" matTooltipPosition="right" (click)="sendMessage(element, offlineInput)" class="material-icons">send</span>
                         </ng-template>
                     </mat-expansion-panel>
                 </td>
