Right justify working

--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -61,7 +61,7 @@
             </ng-container>
 
             <ng-container matColumnDef="remove">
-                <td mat-cell *matCellDef="let element"> 
+                <td class="right-justify" mat-cell *matCellDef="let element"> 
                     <span matTooltip="Remove Friend" matTooltipPosition="right" (click)="removeFriend(element)" class="material-icons">close</span>
                 </td>
             </ng-container>
@@ -89,7 +89,7 @@
             </ng-container>
 
             <ng-container matColumnDef="remove">
-                <td mat-cell *matCellDef="let element"> 
+                <td class="right-justify" mat-cell *matCellDef="let element"> 
                     <span matTooltip="Remove Friend" matTooltipPosition="right" (click)="removeFriend(element)" class="material-icons">close</span>
                 </td>
             </ng-container>
