--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.css
@@ -44,6 +44,10 @@ th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:
   padding-right: 0px;
 }
 
+.right-justify {
+  text-align: right;
+}
+
 .mat-expansion-panel {
   background-color: #212529;
   color: aliceblue;
@@ -52,6 +56,11 @@ th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:
 .mat-expansion-panel-header {
   padding: 0px;
   padding-right: 7px;
+}
+
+::ng-deep .mat-expansion-panel-body {
+  padding: 0px !important;
+  padding-bottom: 7px !important;
 }
 
 ::ng-deep .mat-expansion-indicator:after {
