--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -49,14 +49,7 @@
         <table mat-table [dataSource]="onlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
                 <td mat-cell *matCellDef="let element"> 
-                    <mat-expansion-panel class="mat-elevation-z0" hideToggle>
-                        <mat-expansion-panel-header>
-                            {{element.username}}
-                        </mat-expansion-panel-header>
-                        <ng-template matExpansionPanelContent>
-                            <app-chat-box [friend]="element" [host]="host"></app-chat-box>
-                        </ng-template>
-                    </mat-expansion-panel>
+                    <app-social-cell [host]="host" [friend]="element"></app-social-cell>
                 </td>
             </ng-container>
 
@@ -77,14 +70,7 @@
         <table mat-table [dataSource]="offlineFriends" class="mat-elevation-z0">
             <ng-container matColumnDef="username">
                 <td mat-cell *matCellDef="let element"> 
-                    <mat-expansion-panel class="mat-elevation-z0" hideToggle>
-                        <mat-expansion-panel-header>
-                            {{element.username}}
-                        </mat-expansion-panel-header>
-                        <ng-template matExpansionPanelContent>
-                            <app-chat-box [friend]="element" [host]="host"></app-chat-box>
-                        </ng-template>
-                    </mat-expansion-panel>
+                    <app-social-cell [host]="host" [friend]="element"></app-social-cell>
                 </td>
             </ng-container>
 
